@@ -16,12 +16,17 @@ import cn.hutool.core.collection.CollectionUtil;
 import cn.hutool.core.map.MapUtil;
 import cn.hutool.core.util.StrUtil;
 import jakarta.annotation.Resource;
-import org.springframework.data.redis.core.RedisTemplate;
+import org.redisson.api.RBucket;
+import org.redisson.api.RKeys;
+import org.redisson.api.RedissonClient;
 import org.springframework.stereotype.Component;
 
 import java.util.*;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
+import java.util.stream.StreamSupport;
+
+import org.redisson.api.options.KeysScanOptions;
 
 /**
  * 通用Redis缓存操作器
@@ -32,39 +37,46 @@ import java.util.stream.Collectors;
 @Component
 public class CommonCacheOperator {
 
-    /** 所有缓存Key的前缀 */
     private static final String CACHE_KEY_PREFIX = "Cache:";
 
     @Resource
-    private RedisTemplate<String, Object> redisTemplate;
+    private RedissonClient redissonClient;
 
     public void put(String key, Object value) {
-        redisTemplate.boundValueOps(CACHE_KEY_PREFIX + key).set(value);
+        RBucket<Object> bucket = redissonClient.getBucket(CACHE_KEY_PREFIX + key);
+        bucket.set(value);
     }
 
     public void put(String key, Object value, long timeoutSeconds) {
-        redisTemplate.boundValueOps(CACHE_KEY_PREFIX + key).set(value, timeoutSeconds, TimeUnit.SECONDS);
+        RBucket<Object> bucket = redissonClient.getBucket(CACHE_KEY_PREFIX + key);
+        bucket.set(value, java.time.Duration.ofSeconds(timeoutSeconds));
     }
 
     public Object get(String key) {
-        return redisTemplate.boundValueOps(CACHE_KEY_PREFIX + key).get();
+        RBucket<Object> bucket = redissonClient.getBucket(CACHE_KEY_PREFIX + key);
+        return bucket.get();
     }
 
     public void remove(String... key) {
         ArrayList<String> keys = CollectionUtil.toList(key);
-        List<String> withPrefixKeys = keys.stream().map(i -> CACHE_KEY_PREFIX + i).collect(Collectors.toList());
-        redisTemplate.delete(withPrefixKeys);
+        List<String> withPrefixKeys = keys.stream().map(i -> CACHE_KEY_PREFIX + i).toList();
+        redissonClient.getKeys().delete(withPrefixKeys.toArray(new String[0]));
     }
 
     public Collection<String> getAllKeys() {
-        Set<String> keys = redisTemplate.keys(CACHE_KEY_PREFIX + "*");
-        // 去掉缓存key的common prefix前缀
-        return keys.stream().map(key -> StrUtil.removePrefix(key, CACHE_KEY_PREFIX)).collect(Collectors.toSet());
+        RKeys keys = redissonClient.getKeys();
+        Iterable<String> keysByPattern = keys.getKeysStream(KeysScanOptions.defaults().pattern(CACHE_KEY_PREFIX + "*")).collect(Collectors.toList());
+        return StreamSupport.stream(keysByPattern.spliterator(), false)
+                .map(key -> StrUtil.removePrefix(key, CACHE_KEY_PREFIX))
+                .collect(Collectors.toSet());
     }
 
     public Collection<Object> getAllValues() {
-        Set<String> keys = redisTemplate.keys(CACHE_KEY_PREFIX + "*");
-        return redisTemplate.opsForValue().multiGet(keys);
+        Collection<String> allKeys = this.getAllKeys();
+        return allKeys.stream()
+                .map(this::get)
+                .filter(Objects::nonNull)
+                .collect(Collectors.toList());
     }
 
     public Map<String, Object> getAllKeyValues() {
@@ -77,7 +89,12 @@ public class CommonCacheOperator {
     }
 
     public void removeBatch(String pattern) {
-        Set<String> keys = redisTemplate.keys(CACHE_KEY_PREFIX + pattern);
-        redisTemplate.delete(keys);
+        RKeys keys = redissonClient.getKeys();
+        Iterable<String> keysByPattern = keys.getKeysStream(KeysScanOptions.defaults().pattern(CACHE_KEY_PREFIX + pattern)).collect(Collectors.toList());
+        List<String> keyList = StreamSupport.stream(keysByPattern.spliterator(), false)
+                .toList();
+        if (!keyList.isEmpty()) {
+            keys.delete(keyList.toArray(new String[0]));
+        }
     }
 }
